--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,1 @@
-export GUILE_LOAD_PATH="${GUILE_LOAD_PATH:+:}$GUILE_LOAD_PATH"
+export GUILE_LOAD_PATH="$PWD/src:$HOME/.config/guix/current/share/guile/site/3.0:$GUILE_LOAD_PATH"
